# TV-ambient-lighting_Raspberry-pi

./: .gitignore  CMakeLists.txt  README.md  amb_led_tv.sln  amb_led_tv.vcxproj  test_code.cpp
Install/: INSTALL_OPENCV.md  install_opencv.sh  install_opencv_linux.sh  install_opencv_windows.bat  setup_for_windows.bat
Release/V1.0/: TV_ambient_lighting_rasppi  TV_ambient_lighting_rasppi-0.1.1-Linux.sh  install_linux.sh
Setup for development/: setup_dev_linux.sh
Source/: Color.h  Dimensions.h  LEDCounts.h  Zone.cpp  Zone.h  Zone.hpp  ZoneManager.cpp  ZoneManager.h  const_config.h  main.cpp
Visual Studio project/: TV ambient lighting (Raspberry pi).sln  TV ambient lighting (Raspberry pi).vcxproj  TV ambient lighting (Raspberry pi).vcxproj.filters
